--- a/css/main.css
+++ b/css/main.css
@@ -39,9 +39,8 @@
   font-family: Roboto !important; }
 #paleta-colores .separator {
   width: 20%;
-  background-color: black;
   margin: auto;
-  border-top: 1px solid;
+  border-top: 1px solid black;
   margin-bottom: 5%; }
 #paleta-colores .first-row .col-md-2:first-child {
   padding: 0 5% 10%;
@@ -168,5 +167,24 @@
   background-color: #DC403B;
   margin-bottom: 1%;
   font-weight: 400; }
+
+#about-us {
+  box-shadow: 0px -3px 16px #6b7279;
+  background-color: #2e3c50; }
+  #about-us h1 {
+    margin-top: 10%;
+    color: white;
+    font-size: 5em;
+    font-weight: 400;
+    text-align: center;
+    font-family: Roboto !important; }
+  #about-us .separator {
+    width: 20%;
+    margin: auto;
+    border-top: 1px solid white;
+    margin-bottom: 5%; }
+  #about-us p {
+    color: white;
+    font-weight: 300; }
 
 /*# sourceMappingURL=main.css.map */
