--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
+#price .col-md-3 .price-box .cost span,
+#price .col-md-3 .price-box .cost h6 {
+  font-size: 0.2em;
+  font-weight: 300; }
+
+#our-clients .first-row > p, #our-clients .client-say h5 {
+  margin-bottom: 5%; }
+
 .navbar {
   padding: 0 0;
   background-color: #27AD60 !important;
@@ -260,7 +268,7 @@
       margin: auto; }
       #do .col-md-4 .do-item .parrafo-do p {
         font-size: 1.18em;
-        color: #BFC1C0;
+        color: #C1C1C1;
         text-align: center;
         font-weight: 300;
         font-family: Roboto !important; }
@@ -283,7 +291,7 @@
     font-weight: 400; }
 
 #awesome-team {
-  padding: 10% 0;
+  padding: 12% 0;
   background-color: #27AD60 !important; }
   #awesome-team h1 {
     color: white;
@@ -301,5 +309,146 @@
     text-align: center;
     font-weight: 300;
     font-family: Roboto !important; }
+  #awesome-team .person-team {
+    margin-top: 30%;
+    text-align: center;
+    color: white; }
+    #awesome-team .person-team .avatar-team {
+      margin: 10% 24%;
+      padding: 27%;
+      background-position: 72%;
+      background-size: 130% 130%;
+      background-image: url("../img/team/1.jpg"); }
+    #awesome-team .person-team h4 {
+      color: white;
+      text-align: center;
+      font-weight: 300;
+      font-family: Roboto !important; }
+    #awesome-team .person-team h6 {
+      font-weight: 600 !important;
+      color: #443E44;
+      text-align: center;
+      font-weight: 300;
+      font-family: Roboto !important; }
+    #awesome-team .person-team .separator {
+      width: 20%;
+      margin: auto;
+      border-top: 1px solid #9E968F;
+      margin-bottom: 5%;
+      border-top-style: dashed;
+      width: 100% !important; }
+    #awesome-team .person-team p {
+      color: #C1C1C1;
+      text-align: center;
+      font-weight: 300;
+      font-family: Roboto !important; }
+    #awesome-team .person-team i {
+      color: #C1C1C1;
+      font-size: 1.5em;
+      margin: 4% 2% 0; }
+
+#price {
+  padding: 10% 0;
+  background-color: #2e3c50; }
+  #price h1 {
+    color: white;
+    font-size: 5em;
+    font-weight: 400;
+    text-align: center;
+    font-family: Roboto !important; }
+  #price .separator {
+    width: 20%;
+    margin: auto;
+    border-top: 1px solid white;
+    margin-bottom: 1%; }
+  #price p {
+    color: white;
+    text-align: center;
+    font-weight: 300;
+    font-family: Roboto !important; }
+  #price .col-md-3 .price-box {
+    border: 1px solid #27AD60 !important;
+    text-align: center;
+    margin-top: 25%; }
+    #price .col-md-3 .price-box .range-orange {
+      background-color: #8F5F38;
+      font-size: 2em;
+      color: #C1C1C1;
+      font-weight: 300;
+      padding: 7% 0; }
+    #price .col-md-3 .price-box .range {
+      background-color: transparent;
+      font-size: 2em;
+      color: #C1C1C1;
+      font-weight: 300;
+      padding: 7% 0; }
+    #price .col-md-3 .price-box .cost {
+      background-color: #27AD60 !important;
+      font-size: 4em;
+      color: white;
+      font-weight: 400;
+      padding: 5% 0; }
+    #price .col-md-3 .price-box .first-detail {
+      padding: 3% 0;
+      color: #C1C1C1;
+      font-weight: 300;
+      background-color: #8F5F38; }
+    #price .col-md-3 .price-box .detail-trans {
+      padding: 3% 0;
+      color: #C1C1C1;
+      font-weight: 300;
+      background-color: transparent; }
+    #price .col-md-3 .price-box .detail-bg {
+      padding: 3% 0;
+      color: #2e3c50;
+      font-weight: 300;
+      background-color: white; }
+    #price .col-md-3 .price-box .general-btn {
+      background-color: #443E44;
+      color: white;
+      margin: auto;
+      width: 37%;
+      text-align: center;
+      padding: 1% 0;
+      font-size: 1.5em;
+      font-weight: 400;
+      padding: 3% 0;
+      margin-top: 15%;
+      margin-bottom: 15%; }
+
+#our-clients {
+  padding: 10% 0;
+  background-color: #2e3c50; }
+  #our-clients h1 {
+    color: white;
+    font-size: 5em;
+    font-weight: 400;
+    text-align: center;
+    font-family: Roboto !important; }
+  #our-clients .separator {
+    width: 20%;
+    margin: auto;
+    border-top: 1px solid white;
+    margin-bottom: 1%; }
+  #our-clients p {
+    color: white;
+    text-align: center;
+    font-weight: 300;
+    font-family: Roboto !important; }
+  #our-clients .client-say {
+    font-size: 1.4em; }
+    #our-clients .client-say p {
+      font-style: oblique;
+      color: #C1C1C1;
+      text-align: center;
+      font-weight: 300;
+      font-family: Roboto !important; }
+    #our-clients .client-say h5 {
+      font-size: 1em;
+      font-weight: 500 !important;
+      color: #8F5F38;
+      text-align: center;
+      font-weight: 300;
+      font-family: Roboto !important; }
 
 /*# sourceMappingURL=main.css.map */
